# pcse

./: .gitignore  CMakeLists.txt  GUIDE.md  LICENSE  README.md  build.sh  flake.nix  grammar.ebnf  lexer.hpp  manual.cpp  parser.cpp  t2.pcse  test.cpp  test.pcse  util.hpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: basics.md  changes.md  grammar.ebnf
examples/: 01-hello.pcse  02-numbers.pcse  03-variables.pcse
src/: '  ]  bytecode.hpp  cstr.hpp  date.hpp  environment.hpp  error.hpp  fraction.hpp  globals.hpp  grammar.ebnf  interpreter.hpp  lexer.hpp  main.cpp  parser.hpp  utils.hpp  value.hpp  vm.hpp
test/: date.test.cpp  fraction.test.cpp  interpreter.test.cpp  lexer.test.cpp  parser.test.cpp  utils.test.cpp
test/invalid-files/: arr_assign.err  arr_assign.in.pcse  bool_div.err  bool_div.in.pcse  div_by_zero.err  div_by_zero.in.pcse  for_loop_invalid_type.err  for_loop_invalid_type.in.pcse  index_non_array.err  index_non_array.in.pcse  non_func.err  non_func.in.pcse  proc_return.err  proc_return.in.pcse  real_to_int.err  real_to_int.in.pcse  reverse_for_loop.err  reverse_for_loop.in.pcse  reverse_for_loop_2.in.pcse
test/lex-files/: fail_invalid_str.pcse  pass_char.pcse  pass_decimal.pcse  pass_nothing.pcse  pass_reserved.pcse
test/parser-files/: fail_declare.pcse  fail_emptycase.pcse  fail_eof.pcse  fail_scope.pcse  pass_array.pcse  pass_char.pcse  pass_declare.pcse  pass_for.pcse  pass_func_call.pcse  pass_unary_mul.pcse
test/valid-files/: array_arg.in.pcse  builtin.in.pcse  const.in.pcse  copy_arr.in.pcse  decimal.in.pcse  for.in.pcse  for_override.in.pcse  for_override.out  func_call.in.pcse  func_call.out  func_scope.in.pcse  helloworld.in.pcse  input.in.pcse  input.out  int_to_real.in.pcse  nested_arr.in.pcse  proc.in.pcse  proc.out  recursive.in.pcse  repeat.in.pcse  string.in.pcse  string.out  useless_parens.in.pcse
